# minio-rsc

./:  README.md  .env  .gitignore  Cargo.toml  README.md
src/: client.rs  credentials.rs  data.rs  error.rs  errors.rs  lib.rs  provider.rs  signer.rs  sse.rs  time.rs  utils.rs
src/client/: args.rs  bucket.rs  client.rs  executor.rs  fs_stream.rs  mod.rs  mutilpart_upload.rs  operate_bucket.rs  operate_ext.rs  operate_object.rs  presigned.rs  querymap.rs  response.rs  select_object_reader.rs
src/datatype/: list_buckets_response.rs  list_objects_response.rs  mod.rs  multi_part_upload.rs  object_lock_configure.rs  retention.rs  select_object_content.rs  tags.rs
src/datatype/response/: complete_multipart_upload_result.rs  copy_part_ressult.rs  list_multipart_uploads_result.rs
src/executor/: bucket_executor.rs  get_object_executor.rs  mod.rs  object_executor.rs  presigned_executor.rs
src/types/: legal_hold.rs  list_buckets_response.rs  list_objects_response.rs  mod.rs  object_lock_configure.rs  replication_confirguration.rs  retention.rs  tags.rs  versioning_configuration.rs
src/types/args/: bucket_args.rs  copy_source.rs  list_multipart_uploads_args.rs  list_objects_args.rs  make_bucket_args.rs  mod.rs  mutil_part_upload_args.rs  object_args.rs  presigned_args.rs  select_object_content.rs
src/types/response/: complete_multipart_upload_result.rs  copy_part_ressult.rs  initiate_multipart_upload_result.rs  list_buckets_response.rs  list_multipart_uploads_result.rs  list_objects_response.rs  list_parts_result.rs  mod.rs  select_object_reader.rs
src/xml/: de.rs  error.rs  mod.rs  ser.rs  test.rs
test/: minio-server.sh  test.txt
tests/: common.rs  minio-server.sh  test.rs  test.txt  test_all.sh  test_bucket.rs  test_mutilpart_upload.rs  test_object.rs
