[package]
name = "minio-rsc"
description = "rust for minio"
keywords = ["minio", "s3", "tokio"]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitee.com/krealseu/minio-rsc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minio_rsc"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1", features = ["full"] }
hyper = { version = "^0.14" }
reqwest = { version = "^0.11.13", features = [
    "native-tls",
    "blocking",
    "rustls-tls",
    "stream",
] }
chrono = "^0.4"
rust-crypto = "^0.2"
hex = "^0.4.2"
once_cell = "^1.13"
regex = "^1.6.0"
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
futures = "^0.3.5"
futures-core = "^0.3.5"
futures-util = "^0.3.5"
base64 = "^0.21.0"
urlencoding = "^2.1.2"
bytes = "^1.2.0"

[dev-dependencies]
dotenv = "^0.15"
