[package]
name = "minio-rsc"
description = "rust for minio, api is compliant with the Amazon S3 protocol."
keywords = ["minio", "s3", "tokio"]
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitee.com/krealseu/minio-rsc"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minio_rsc"
path = "src/lib.rs"

[dependencies]
hyper = { version = "^1" }
reqwest = { version = "^0.12", features = ["stream"] }
chrono = { version = "^0.4", default-features = false, features = [
    "alloc",
    "clock",
    "serde",
] }
hex = "^0.4.2"
once_cell = "^1.13"
regex = "^1.6.0"
serde = { version = "^1", features = ["derive"] }
futures = "^0.3.5"
futures-core = "^0.3.5"
futures-util = "^0.3.5"
base64 = "^0.22"
urlencoding = "^2.1.2"
bytes = "^1.2.0"
md5 = "^0.7"
sha2 = "^0.10"
hmac = "^0.12.0"
async-stream = { version = "^0.3.5" }
tokio = { version = "^1", features = ["fs"], optional = true }
crc32fast = "^1.4"
serde-xml-rs = "^0.6"

[features]
fs-tokio = ["tokio"]
ext = []

[dev-dependencies]
dotenv = "^0.15"
tokio = { version = "^1", features = ["full"] }
async-stream = { version = "^0.3.5" }
